install native-base

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ios": "react-native run-ios --simulator=\"iPhone 7\""
   },
   "dependencies": {
+    "native-base": "^2.3.10",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0"
   },
