--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "ios": "react-native run-ios --simulator=\"iPhone 7\""
+    "ios": "react-native run-ios --simulator=\"iPhone 7\"",
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "native-base": "^2.3.10",
@@ -13,12 +14,16 @@
     "react-native": "0.54.0"
   },
   "devDependencies": {
+    "@types/jest": "^22.2.2",
+    "@types/react": "^16.1.0",
+    "@types/react-native": "^0.52.20",
     "babel-jest": "22.4.1",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.18.2",
     "eslint-plugin-react": "^7.7.0",
     "jest": "22.4.2",
-    "react-test-renderer": "^16.3.0-alpha.1"
+    "react-test-renderer": "^16.3.0-alpha.1",
+    "typescript": "^2.7.2"
   },
   "jest": {
     "preset": "react-native"
